[project]
name = "typsa"
version = "0.1.0"
description = "A strongly-typed PyPSA wrapper."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2,<3", # Pydantic V1 not tested.
    "pypsa>=1,<2",    # A specific version of TyPSA is not necessarily backwards compatible with an older minor PyPSA version, and is not necessarily forwards compatible with newer major PyPSA version.
]

[dependency-groups]
dev = [
    "datamodel-code-generator>=0.53,<0.54", # Pin until stable.
    "mkdocstrings-python>=2,<3",
    "ruff>=0.15,<0.16",                     # Pin until stable.
    "zensical>=0.0,<0.1",                   # Pin until stable.
]
